--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -57,7 +57,7 @@
         "CALC_FRONT": "Calculation of the Front SAG",
         "PUT_MEASURE": "Enter the measures",
         "MEASURE": "Measure",
-        "MEASURE_BENCH": "Bank-mounted measure",
+        "MEASURE_BENCH": "Measure mounted on the bench!",
         "MEASURE_GROUND": "Measured on the ground!",
         "MEASURE_RIDER": "Measured with the pilot and his equipment!",
         "RESULTS": "Results",
