--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -58,7 +58,7 @@
         "CALC_FRONT": "Cálculo del SAG Delantero",
         "PUT_MEASURE": "Introduce las medidas",
         "MEASURE": "Medida",
-        "MEASURE_BENCH": "¡Medida montada en el banco",
+        "MEASURE_BENCH": "¡Medida montada en el banco!",
         "MEASURE_GROUND": "¡Medida en el suelo!",
         "MEASURE_RIDER": "¡Medida con el piloto y su equipo!",
         "RESULTS": "Resultados",
