fix wording and margin nav

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,8 +42,8 @@
         "DINAMIC_R": "Sag Dynamic Rear",
         "DINAMIC_F": "Sag Dynamic Front",
         "START": "Start calculating",
-        "FRONT": "Sag Front",
-        "REAR": "SAG Rear",
+        "FRONT": "Front SAG",
+        "REAR": "Rear SAG",
         "RECOMENDED_F": "Recommended Front SAG",
         "RECOMENDED_R": "Recommended Rear SAG",
         "MANUAL": "Check the manual for the correct SAG",
