--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,37 +10,37 @@
         "SAMPLE_2": "Example 2",
         "SAMPLE_3": "Example 3",
         "SAMPLE_1_TEXT_1": "RA = 600, RB = 550, RC = 480",
-        "SAMPLE_1_TEXT_2": "SAG Static > RA - RB = 600-550 = 50mm (increase preload, spring tighten)",
-        "SAMPLE_1_TEXT_3": "Dynamic SAG > RA - RC = 600-480 = 120mm (increase preload, spring tighten)",
+        "SAMPLE_1_TEXT_2": "Static SAG => RA - RB = 600-550 = 50mm (increase preload, spring tighten)",
+        "SAMPLE_1_TEXT_3": "Dynamic SAG => RA - RC = 600-480 = 120mm (increase preload, spring tighten)",
         "SAMPLE_2_TEXT_1": "RA = 600, RB = 580, RC = 530",
-        "SAMPLE_2_TEXT_2": "STATIC SAG > RA - RB = 600-580 = 20mm (remove preload, loosen spring)",
-        "SAMPLE_2_TEXT_3": "Dynamic SAG > RA - RC = 600-530 = 70mm (remove preload, loosen spring)",
+        "SAMPLE_2_TEXT_2": "Static SAG => RA - RB = 600-580 = 20mm (remove preload, loosen spring)",
+        "SAMPLE_2_TEXT_3": "Dynamic SAG => RA - RC = 600-530 = 70mm (remove preload, loosen spring)",
         "SAMPLE_3_TEXT_1": "RA = 600, RB = 565, RC = 495",
-        "SAMPLE_3_TEXT_2": "Static SAG > RA - RB = 600-565 = 35mm (correct preload)",
-        "SAMPLE_3_TEXT_3": "Dynamic SAG > RA - RC = 600-495 = 105mm (correct preload)",
+        "SAMPLE_3_TEXT_2": "Static SAG => RA - RB = 600-565 = 35mm (correct preload)",
+        "SAMPLE_3_TEXT_3": "Dynamic SAG => RA - RC = 600-495 = 105mm (correct preload)",
         "PAYPAL_TEXT": "Give me a coffee"
     },
     "SAG":{
         "BENCH": "In the Bank",
-        "BENCH_R": "RA'> Rear A, Rear measurement with the bike mounted on a bench.",
-        "BENCH_F": "FA'> Front A, Front measurement with the bike mounted on a bench.",
+        "BENCH_R": "RA => Rear A, Rear measurement with the bike mounted on a bench.",
+        "BENCH_F": "FA => Front A, Front measurement with the bike mounted on a bench.",
         "GROUND": "On the ground",
-        "GROUND_R": "RB'> Rear B, Rear measurement with the bike on the ground.",
-        "GROUND_F": "FB'> Front B, Front measurement with the bike on the ground.",
+        "GROUND_R": "RB => Rear B, Rear measurement with the bike on the ground.",
+        "GROUND_F": "FB => Front B, Front measurement with the bike on the ground.",
         "RIDER": "With the pilot",
-        "RIDER_R": "RC'> Rear C, Rear measurement with the rider mounted on the bike, should have all the equipment.",
-        "RIDER_F": "FC'> Front C, Front measurement with the rider mounted on the bike, should have all the equipment.",
-        "CALCULATE": "SAG Calculation",
-        "CALCULATE_SR": "RA - RB'> normally between 30mm and 40mm",
-        "CALCULATE_SF": "FA - FB '> normally between 30mm and - 40mm",
-        "CALCULATE_DR": "RA - RC '> normally between 100mm and - 110mm",
-        "CALCULATE_DF": "FA - FC'> normally between 60mm and 70mm",
+        "RIDER_R": "RC => Rear C, Rear measurement with the rider mounted on the bike, should have all the equipment.",
+        "RIDER_F": "FC => Front C, Front measurement with the rider mounted on the bike, should have all the equipment.",
+        "CALCULATE": "Calculation of SAG",
+        "CALCULATE_SR": "RA - RB => normally between 30mm and 40mm",
+        "CALCULATE_SF": "FA - FB => normally between 30mm and - 40mm",
+        "CALCULATE_DR": "RA - RC => normally between 100mm and - 110mm",
+        "CALCULATE_DF": "FA - FC => normally between 60mm and 70mm",
         "KTM_STATIC_R": "(KTM normally between 33mm and 35mm)",
         "KTM_DINAMIC_R": "(KTM normally between 105mm and 115mm)",
-        "STATIC_R": "Sag Static Rear",
-        "STATIC_F": "Sag Static Front",
-        "DINAMIC_R": "Sag Dynamic Rear",
-        "DINAMIC_F": "Sag Dynamic Front",
+        "STATIC_R": "Static Rear SAG",
+        "STATIC_F": "Static Front SAG",
+        "DINAMIC_R": "Dynamic Rear SAG",
+        "DINAMIC_F": "Dynamic Front SAG",
         "START": "Start calculating",
         "FRONT": "Front SAG",
         "REAR": "Rear SAG",
