feat(offline): ng add pwa

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,7 +1,7 @@
 {
     "HOME":{
         "TITLE": "SAG (Shock Absorber Group)",
-        "SUB_TITLE": "SAG explanation",
+        "SUB_TITLE": "SAG explanation.",
         "INFO": "Information",
         "WHAT_IS": "What is SAG?",
         "EXPLANATION": "Sag is the sinking of the shock absorbers mounted on the bike, with all its equipment. Having it properly adjusted ensures that the shock absorbers are neither too rigid nor too soft.",
