--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -2,7 +2,7 @@
 {
     "HOME": {
         "TITLE": "SAG (Shock Absorber Group)",
-        "SUB_TITLE": "Explicación del SAG",
+        "SUB_TITLE": "Explicación del SAG.",
         "INFO": "Información",
         "WHAT_IS": "¿Qué es el SAG?",
         "EXPLANATION": "Sag es el hundimiento de los amortiguadores montado en la moto, con todo su equipo. Tenerlo correctamente ajustado garantiza que los amortiguadores no sean ni demasiado rígidos ni demasiado blandos.",
