--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -32,8 +32,8 @@
         "RIDER_F": "FC => Front C, Front measurement with the rider mounted on the bike, should have all the equipment.",
         "CALCULATE": "Calculation of SAG",
         "CALCULATE_SR": "RA - RB => normally between 30mm and 40mm",
-        "CALCULATE_SF": "FA - FB => normally between 30mm and - 40mm",
-        "CALCULATE_DR": "RA - RC => normally between 100mm and - 110mm",
+        "CALCULATE_SF": "FA - FB => normally between 30mm and 40mm",
+        "CALCULATE_DR": "RA - RC => normally between 100mm and 110mm",
         "CALCULATE_DF": "FA - FC => normally between 60mm and 70mm",
         "KTM_STATIC_R": "(KTM normally between 33mm and 35mm)",
         "KTM_DINAMIC_R": "(KTM normally between 105mm and 115mm)",
