--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,11 +10,11 @@
         "SAMPLE_2": "Example 2",
         "SAMPLE_3": "Example 3",
         "SAMPLE_1_TEXT_1": "RA = 600, RB = 550, RC = 480",
-        "SAMPLE_1_TEXT_2": "Static SAG => RA - RB = 600-550 = 50mm (increase preload, spring tighten)",
-        "SAMPLE_1_TEXT_3": "Dynamic SAG => RA - RC = 600-480 = 120mm (increase preload, spring tighten)",
+        "SAMPLE_1_TEXT_2": "Static SAG => RA - RB = 600-550 = 50mm (increase preload, tighten spring)",
+        "SAMPLE_1_TEXT_3": "Dynamic SAG => RA - RC = 600-480 = 120mm (increase preload, tighten spring)",
         "SAMPLE_2_TEXT_1": "RA = 600, RB = 580, RC = 530",
-        "SAMPLE_2_TEXT_2": "Static SAG => RA - RB = 600-580 = 20mm (remove preload, loosen spring)",
-        "SAMPLE_2_TEXT_3": "Dynamic SAG => RA - RC = 600-530 = 70mm (remove preload, loosen spring)",
+        "SAMPLE_2_TEXT_2": "Static SAG => RA - RB = 600-580 = 20mm (decrease preload, loosen spring)",
+        "SAMPLE_2_TEXT_3": "Dynamic SAG => RA - RC = 600-530 = 70mm (decrease preload, loosen spring)",
         "SAMPLE_3_TEXT_1": "RA = 600, RB = 565, RC = 495",
         "SAMPLE_3_TEXT_2": "Static SAG => RA - RB = 600-565 = 35mm (correct preload)",
         "SAMPLE_3_TEXT_3": "Dynamic SAG => RA - RC = 600-495 = 105mm (correct preload)",
@@ -53,7 +53,7 @@
         "STATIC": "Static SAG",
         "SAVE": "Apply",
         "CLOSE": "Close",
-        "CALC_REAR": "Calculation of the Sag Rear",
+        "CALC_REAR": "Calculation of the Rear SAG",
         "CALC_FRONT": "Calculation of the Front SAG",
         "PUT_MEASURE": "Enter the measures",
         "MEASURE": "Measure",
@@ -66,7 +66,7 @@
         "CALC": "Calculate",
         "CLEAN": "Reset",
         "MORE_PRE": "Increase preload, tighten/change spring",
-        "LESS_PRE": "Remove preload, loosen/change spring",
+        "LESS_PRE": "Decrease preload, loosen/change spring",
         "OK_PRE": "Correct Preload"
     },
     "ERROR":{
