--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -46,7 +46,7 @@
         "REAR": "Rear SAG",
         "RECOMENDED_F": "Recommended Front SAG",
         "RECOMENDED_R": "Recommended Rear SAG",
-        "MANUAL": "Check the manual for the correct SAG",
+        "MANUAL": "Check the manual of your bike for the correct SAG",
         "MIN":"Minimum",
         "MAX": "Maximum",
         "DINAMIC": "Dynamic SAG",
