--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -46,7 +46,7 @@
         "REAR": "SAG arrière",
         "RECOMENDED_F": "SAG avant recommandé",
         "RECOMENDED_R": "SAG arrière recommandé",
-        "MANUAL": "Consultez le manuel pour connaître le SAG correct ",
+        "MANUAL": "Consultez le manuel de votre moto pour le SAG correct",
         "MIN": "Minimun",
         "MAX": "Maximun",
         "DINAMIC": "SAG dynamique",
