--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -46,7 +46,7 @@
         "REAR": "SAG posteriore",
         "RECOMENDED_F": "SAG anteriore consigliato",
         "RECOMENDED_R": "SAG posteriore consigliato",
-        "MANUAL": "Controllare il manuale per il SAG corretto",
+        "MANUAL": "Controllare il manuale della tua moto per il SAG corretto",
         "MIN":"Minimo",
         "MAX": "Massimo",
         "DINAMIC": "SAG dinamico",
