--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -47,7 +47,7 @@
         "REAR": "SAG Trasero",
         "RECOMENDED_F": "SAG Delantero recomendado",
         "RECOMENDED_R": "SAG Trasero recomendado",
-        "MANUAL": "Verifica el manual para el SAG correcto",
+        "MANUAL": "Verifica el manual de tu moto para el SAG correcto",
         "MIN":"Mínimo",
         "MAX": "Máximo",
         "DINAMIC": "SAG Dinámico",
