feat(results-dialog): Change results to a dialog

--- a/src/assets/i18n/br.json
+++ b/src/assets/i18n/br.json
@@ -49,7 +49,7 @@
         "MANUAL": "Consulte o manual da sua moto para o SAG correto",
         "MIN":"Mínimo",
         "MAX": "Máximo",
-        "DINAMIC": "SAG Dinâmico",
+        "DYNAMIC": "SAG Dinâmico",
         "STATIC": "SAG Estático",
         "SAVE": "Aplicar",
         "CLOSE": "Fechar",
