--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -49,7 +49,7 @@
         "MANUAL": "Verifica el manual de tu moto para el SAG correcto",
         "MIN": "Mínimo",
         "MAX": "Máximo",
-        "DINAMIC": "SAG Dinámico",
+        "DYNAMIC": "SAG Dinámico",
         "STATIC": "SAG Estático",
         "SAVE": "Aplicar",
         "CLOSE": "Cerrar",
