--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -49,7 +49,7 @@
         "MANUAL": "Consultez le manuel de votre moto pour le SAG correct",
         "MIN": "Minimun",
         "MAX": "Maximun",
-        "DINAMIC": "SAG dynamique",
+        "DYNAMIC": "SAG dynamique",
         "STATIC": "SAG statique",
         "SAVE": "Appliquer",
         "CLOSE": "Fermer",
