--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -49,7 +49,7 @@
         "MANUAL": "Controllare il manuale della tua moto per il SAG corretto",
         "MIN":"Minimo",
         "MAX": "Massimo",
-        "DINAMIC": "SAG dinamico",
+        "DYNAMIC": "SAG dinamico",
         "STATIC": "SAG statico",
         "SAVE": "Applica",
         "CLOSE": "Chiudi",
